tests/NormalTests/paczka1/fuzzy1/15304868.err
Error in line 2: 2C0M3o S596 2,3
Error in line 7: A467 A467 72,2
Error in line 10: 2C0M3o S802 95,7
Error in line 16: 2C0M3o S596 9,9
Error in line 26: HxNc71 S596 194,9
Error in line 35: cJZ7xyaAyF S802 76,8
Error in line 37: xkm7SvJNPhp S596 261,67
